--- a/homework/javaScript/stopwatch/index.html
+++ b/homework/javaScript/stopwatch/index.html
@@ -10,6 +10,7 @@ See LICENSE for details.
     <title>Stopwatch</title>
     <link rel="stylesheet" href="main.css">
     <script src='hw.js'></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>    
   </head>
   <body>
     <h1> Stopwatch </h1>
