--- a/homework/javaScript/progress-bar/index.html
+++ b/homework/javaScript/progress-bar/index.html
@@ -5,39 +5,44 @@ See LICENSE for details.
 -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel='stylesheet' type='text/css' href='main.css'>
-    <script src='hw.js'></script>
-    <script src='countdown.js'></script>
-    <title>Countdown Displays</title>
-  </head>
-  <body>
 
-    <h1> Countdown Displays </h1>
+<head>
+  <meta charset="utf-8">
+  <link rel='stylesheet' type='text/css' href='main.css'>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+  <script src='hw.js'></script>
+  <script src='countdown.js'></script>
+  <title>Countdown Displays</title>
+</head>
 
-    <h2 id='numeric-display'>100</h2>
+<body>
 
-    <h4> Progress Bar(s) </h4>
-    <div class='component' id='progress-bars'>
-      <div class='progress-bar'></div>
+  <h1> Countdown Displays </h1>
+
+  <h2 id='numeric-display'>100</h2>
+
+  <h4> Progress Bar(s) </h4>
+  <div class='component' id='progress-bars'>
+    <div class='progress-bar'></div>
+  </div>
+
+  <h4> Lit Fuse(s) </h4>
+  <div class='component' id='fuses'>
+    <div class='fuse'>
+      <div class='unburnt'></div>
+      <div class='flame'></div>
+      <div class='burnt'></div>
     </div>
+  </div>
 
-    <h4> Lit Fuse(s) </h4>
-    <div class='component' id='fuses'>
-      <div class='fuse'>
-        <div class='unburnt'></div>
-        <div class='flame'></div>
-        <div class='burnt'></div>
-      </div>
+  <h4> Crawler(s) </h4>
+  <div class='component' id='crawlers'>
+    <div class='crawler-track'>
+      <div class='crawler'></div>
     </div>
+  </div>
 
-    <h4> Crawler(s) </h4>
-    <div class='component' id='crawlers'>
-      <div class='crawler-track'>
-        <div class='crawler'></div>
-      </div>
-    </div>
+</body>
 
-  </body>
 </html>
